# hdf5-plotter

./: .env  .gitignore  Cargo.toml  justfile
.github/workflows/: CI.yml  armv7.yml  release.yml
examples/: single_writer_multiple_reader.rs
scripts/: package.bash
src/: config.rs  inspect.rs  lib.rs  main.rs  my_hdf5.rs  plot.rs  swmr.rs  util.rs
src/config/: misc.rs
src/my_hdf5/: dataset.rs  dataspace.rs  htype.rs  inspect.rs  util.rs
src/plot/: plotly.rs  rplotly.rs  rplotters.rs
