[package]
name = "hdf5_test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rsplotter"
path = "src/main.rs"

[dependencies]
hdf5 = { git = "https://github.com/aldanor/hdf5-rust", rev = "43015ddaa87e62b63dc1b1ae7fed49a430e1b53a" }
hdf5-sys = { git = "https://github.com/aldanor/hdf5-rust", rev = "43015ddaa87e62b63dc1b1ae7fed49a430e1b53a", features = [
    "static",
] }

ndarray = "0.15.6"
plotly = { version = "0.9.0", optional = true }
plotters = { version = "0.3.6", optional = true }

[features]
default = ["rplotly"]
rplotters = ["dep:plotters"]
rplotly = ["dep:plotly"]
