[package]
name = "hdf5_test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ploth5"
path = "src/main.rs"


[dependencies]
hdf5 = { git = "https://github.com/aldanor/hdf5-rust", rev = "43015ddaa87e62b63dc1b1ae7fed49a430e1b53a" }
hdf5-sys = { git = "https://github.com/aldanor/hdf5-rust", rev = "43015ddaa87e62b63dc1b1ae7fed49a430e1b53a", features = [
    "static",
] }
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive", "env"] }
log = "0.4.21"
stderrlog = "0.6.0"
strum = "0.26.2"
strum_macros = "0.26.4"
clap_complete = "4.5.6"

ndarray = "0.15.6"
plotly = { version = "0.9.0", optional = true }
plotters = { version = "0.3.6", optional = true }
termcolor = "1.1.3"


[features]
default = ["rplotly"]
rplotters = ["dep:plotters"]
rplotly = ["dep:plotly"]


[dev-dependencies]
pretty_assertions = "1.4.0"
temp-dir = "0.1.11"
assert_fs = "1.0.13"
assert_cmd = "2.0.11"
predicates = "3.0.3"
testresult = "0.4.0"
fancy-regex = "0.13.0"
